--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dependencies": {
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
-        "react-scripts": "3.1.1"
+        "react-redux": "^7.1.1",
+        "react-scripts": "3.1.1",
+        "redux": "^4.0.4",
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -32,7 +35,8 @@
     "devDependencies": {
         "husky": "^3.0.5",
         "lint-staged": "^9.2.5",
-        "prettier": "^1.18.2"
+        "prettier": "^1.18.2",
+        "redux-devtools-extension": "^2.13.8"
     },
     "lint-staged": {
         "*.{js,md}": [
